# educhat-expo-be

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 06c607d06c48_initial.py  2fc6a3dfa053_add_study_configs_table.py  3499540d54d5_add_document_contents_and_file_.py  3cdc15496fe3_rename_page_index_to_page_label.py
app/: config.py  database.py  main.py
app/dependencies/: auth.py  db.py  storage.py
app/models/: document_content.py  file.py  refresh_token.py  study_config.py  user.py
app/routers/: auth.py  explain.py  files.py  ollama.py  study_configs.py  users.py
app/schemas/: auth.py  explain.py  file.py  study_config.py  user.py
app/services/: chunking.py  explain.py  google.py  jwt.py  ollama.py  processing.py  storage.py
