[project]
name = "edu-chat-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "PyJWT>=2.9.0",
    "google-auth>=2.37.0",
    "cachecontrol>=0.14.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "google-cloud-storage>=2.14.0",
    "python-multipart>=0.0.9",
    "pgvector>=0.3.0",
    "pypdf>=4.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
serve = "app.main:run"